--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "call-of-war-team-strategy-planner",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.2.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -17,6 +17,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "date-fns": "^3.6.0",
     "file-saver": "^2.0.5",
+    "lz-string": "^1.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
